--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>DevOps Essentials Sample App</title>
 </head>
-<body style="background-color: #1A729D;">
+<body style="background-color:yellow;">
     <h1 style="font-family: Courier; color: #434342; font-size: 48px; text-align: center;">
         Umaima is great!
     </h1>
